--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,4 @@ numpy==1.26.4
 pandas==2.2.3
 scipy==1.13.1
 matplotlib==3.8.4
-fasttext==0.9.2
-transformers==4.46.1
-torch==2.4.1
-sentencepiece==0.2.0
-protobuf==4.25.3
-openai-whisper==20240930
-pydub==0.25.1
+requests==2.32.3
