--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==1.39.0
+streamlit==1.38.0
 streamlit-webrtc==0.47.7
-av==12.0.0
 numpy==1.26.4
-pandas==2.2.3
-scipy==1.13.1
-matplotlib==3.8.4
-requests==2.32.3
+pandas==2.2.2
+scipy==1.11.4
+langid==1.1.6
+pycld3==0.23       # optional; if install fails, app still works
+faster-whisper==1.0.3
+av==12.0.0
