--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ numpy==1.26.4
 pandas==2.2.3
 scipy==1.11.4
 langid==1.1.6
-faster-whisper==1.0.3
 av==12.0.0
-rich==13.9.4   # ✅ fixes version conflict
+requests==2.32.3
+rich==13.9.4
