--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 streamlit==1.39.0
 streamlit-webrtc==0.47.7
+fasttext==0.9.2
 numpy==1.26.4
-pandas==2.2.3
-scipy==1.11.4
-langid==1.1.6
-av==12.0.0
 requests==2.32.3
-rich==13.9.4
+av==12.0.0
