--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 streamlit==1.39.0
 streamlit-webrtc==0.47.7
-fasttext-wheel==0.9.2
-numpy==1.26.4
 requests==2.32.3
+numpy==1.26.4
+pandas==2.2.3
+plotly==5.24.1
+indic-transliteration==2.3.65
+# fastText is optional; wheel variant is smaller and avoids build tools
+fasttext-wheel==0.9.2
+soundfile==0.12.1
 av==12.0.0
