--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ streamlit-webrtc==0.47.7
 requests==2.32.3
 numpy==1.26.4
 pandas==2.2.3
-plotly==5.24.1
-indic-transliteration==2.3.65
-fasttext-wheel==0.9.2
+langid==1.1.6
+transformers==4.44.2
+datasets==3.0.1
+torch==2.3.1
 soundfile==0.12.1
 av==12.0.0
