--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 streamlit==1.39.0
+rich==13.9.4
 streamlit-webrtc==0.47.7
 requests==2.32.3
 numpy==1.26.4
 pandas==2.2.3
-langid==1.1.6
+torch==2.3.1
 transformers==4.44.2
 datasets==3.0.1
-torch==2.3.1
+langid==1.1.6
 soundfile==0.12.1
 av==12.0.0
