--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 streamlit==1.39.0
 streamlit-webrtc==0.47.7
-requests==2.32.3
+lingua-language-detector==1.3.2
+vaderSentiment==3.3.2
+plotly==5.24.1
 numpy==1.26.4
 pandas==2.2.3
 scipy==1.11.4
-plotly==5.24.1
-langid==1.1.6
-better-profanity==0.7.0
+requests==2.32.3
 av==12.0.0
-aiortc==1.10.1
-pydeck==0.9.1
